--- a/templates/landing.html
+++ b/templates/landing.html
@@ -7,7 +7,7 @@
 <body>
 
 <p>Add zoom roulette to your workspace now!</p>
-<p><a href="https://slack.com/oauth/v2/authorize?client_id=1132648415796.1150316507968&scope=chat:write,commands,chat:write.public,chat:write.customize&user_scope="><img alt="Add to Slack" height="40" width="139" src="https://platform.slack-edge.com/img/add_to_slack.png" srcSet="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x" /></a></p>
+<p><a href="/auth/slack"><img alt="Add to Slack" height="40" width="139" src="https://platform.slack-edge.com/img/add_to_slack.png" srcSet="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x" /></a></p>
 
 </body>
 </html>
