--- a/templates/landing.html
+++ b/templates/landing.html
@@ -3,13 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Zoom Roulette</title>
+    <title>Coffee Roulette</title>
     <style>
         html,
         body {
             color: #2e2e2e;
             font-family: Verdana, sans-serif;
             font-size: 1rem;
+            margin: 1rem;
         }
 
         .message {
@@ -51,6 +52,12 @@
 
         }
 
+        #pb {
+            height: 40px;
+            display: inline-block;
+            width: 100%;
+        }
+
         .copy {
             line-height: 1.5em;
         }
@@ -60,6 +67,9 @@
         }
 
         @media only screen and (min-width: 800px) {
+            body {
+                margin: 2rem;
+            }
             #logo {
                 width: 200px;
                 height: 200px;
@@ -68,9 +78,14 @@
 
             .copy {
                 width: calc(100% - 260px);
-                float: left;
+                float: right;
                 display: inline-block;
                 margin: 0 20px;
+            }
+            #pb {
+                float: left;
+                width: 200px;
+                clear: left;
             }
         }
 
@@ -86,18 +101,16 @@
 </head>
 
 <body>
-    <div class="disclaimer message">Thank you for your interest in zoom-roulette. This app only works for people working
-        at Teamleader and for now there's time nor interest in making it available for people outside of our company. If
-        you're interested, happy to share the code. Or join us at <a href="https://careers.teamleader.eu"
-            target="_blank">Teamleader</a></div>
+    <div class="disclaimer message">Thank you for your interest in Coffee Roulette. 
+    </div>
     <div class="image" id="logo">
     </div>
     <div class="copy">
-        <h1>Zoom Roulette</h1>
+        <h1>Coffee Roulette</h1>
         <p>
-            Put some spice in those long office days! By using the <span class="code">/zoomroulette
+            Put some spice in those long office days! By using the <span class="code">/coffeeroulette
                 [amount-of-guests]</span> slack command in a channel of your liking, you can set up a zoom call with
-            some random colleagues in that channel. What zoom roulette will do is post two links in the channel:</p>
+            some random colleagues in that channel. What Coffee roulette will do is post two links in the channel:</p>
         <img src="/img/slack-example.png" />
 
         <ul>
@@ -110,10 +123,10 @@
             1) into the zoom room with you. You don't know who it will be and they don't know who set up the call!</p>
         <p>Get to know your colleagues & friends in ways you never knew them before!
         </p>
-        <h2>Installing zoom roulette</h2>
+        <h2>Installing coffee roulette</h2>
         <p>
         <ul>
-            <li>To start, click the "Add to slack" button below or just try the <span class="code">/zoomroulette</span>
+            <li>To start, click the "Add to slack" button below or just try the <span class="code">/coffeeroulette</span>
                 command in slack right now. and follow the authentication flow. Approve away. We're on'</li>
             <li>Once you get the success message, click the link to authenticate your zoom account</li>
             <li>Good to go! Try the slack command and meet your mystery colleague!</li>
@@ -132,16 +145,16 @@
         </script>
         {% endif %}
         <p><a
-                href="https://slack.com/oauth/v2/authorize?client_id=1132648415796.1150316507968&amp;scope=chat:write,commands,chat:write.public,chat:write.customize&amp;user_scope="><img
+                href="/auth/slack"><img
                     alt="Add to Slack" height="40" width="139"
                     src="https://platform.slack-edge.com/img/add_to_slack.png"
                     srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x"></a>
         </p>
-        <h2>Using zoom roulette</h2>
+        <h2>Using coffee roulette</h2>
         <p>
         <ul>
-            <li>In a slack channel of your choosing, type <span class="code">/zoomroulette</span> to start a chat with 1
-                person or, for example, <span class="code">/zoomroulette 3</span> to allow 3 others in the room</li>
+            <li>In a slack channel of your choosing, type <span class="code">/coffeeroulette</span> to start a chat with 1
+                person or, for example, <span class="code">/coffeeroulette 3</span> to allow 3 others in the room</li>
             <li>You will see 2 messages in the channel. Make sure to click the "start the meeting" button and <b>NOT</b>
                 the "jump in" button. Leave that one for your mystery guests</li>
             <li>Open the zoom room and wait for your match!</li>
@@ -149,10 +162,12 @@
         </p>
         <h2>Allowing others to spin the roulette</h2>
         <p>
-            Once Zoom Roulette is installed, this is easy: the first time they try to use the command, they'll get a
+            Once Coffee Roulette is installed, this is easy: the first time they try to use the command, they'll get a
             link to go through the setup flow. Once completed, they can use the command just like you!
 
         </p>
+    </div>
+    <div class="image" id="pb"><a target="_blank" class="logo" href="https://www.madewithlove.com"><svg style="margin-right: 3px" width="30" viewBox="0 0 46 35" fill="none" xmlns="http://www.w3.org/2000/svg" class="logo_svg"><path d="M33.3983 0L22.7797 10.6186L12.161 0L0 12.161L22.7797 34.9407L33.3983 24.322L45.5593 12.161L33.3983 0ZM33.3983 2.9661L42.5339 12.1017H24.322L33.3983 2.9661ZM22.7797 31.9153L2.9661 12.161L12.161 2.9661L21.3559 12.161L31.9746 22.7797L22.7797 31.9153Z" fill="#ed2324"></path></svg><span class="logo-title">madewithlove</span></a>
     </div>
 </body>
 
