--- a/templates/slackauth.html
+++ b/templates/slackauth.html
@@ -3,13 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Zoom Roulette</title>
+    <title>Coffee Roulette</title>
     <style>
         html,
         body {
             color: #2e2e2e;
             font-family: Verdana, sans-serif;
             font-size: 1rem;
+            margin: 1rem;
         }
 
         .message {
@@ -51,11 +52,23 @@
 
         }
 
+        #pb {
+            height: 40px;
+            background-size: contain;
+            display: inline-block;
+            width: 100%;
+            background-repeat: no-repeat;
+            background-position: 50% 50%;
+        }
+
         .copy {
             line-height: 1.5em;
         }
 
         @media only screen and (min-width: 800px) {
+            body {
+                margin: 2rem;
+            }
             #logo {
                 width: 200px;
                 height: 200px;
@@ -64,9 +77,14 @@
 
             .copy {
                 width: calc(100% - 260px);
-                float: left;
+                float: right;
                 display: inline-block;
                 margin: 0 20px;
+            }
+            #pb {
+                float: left;
+                width: 200px;
+                clear: left;
             }
         }
 
@@ -74,10 +92,8 @@
 </head>
 
 <body>
-<div class="disclaimer message">Thank you for your interest in zoom-roulette. This app only works for people working
-    at Teamleader and for now there's time nor interest in making it available for people outside of our company. If
-    you're interested, happy to share the code. Or join us at <a href="https://careers.teamleader.eu"
-                                                                 target="_blank">Teamleader</a></div>
+<div class="disclaimer message">Thank you for your interest in coffee roulette.
+</div>
 <div class="image" id="logo">
 </div>
 <div class="copy">
@@ -93,7 +109,7 @@
     </script>
     {% endif %}
     <p><a
-            href="https://slack.com/oauth/v2/authorize?client_id=1132648415796.1150316507968&amp;scope=chat:write,commands,chat:write.public,chat:write.customize&amp;user_scope="><img
+            href="/auth/slack"><img
             alt="Add to Slack" height="40" width="139"
             src="https://platform.slack-edge.com/img/add_to_slack.png"
             srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x"></a>
@@ -102,6 +118,8 @@
     <p>
       For all info about this app, go <a href="/">here</a>.
     </p>
+</div>
+<div class="image" id="pb">
 </div>
 </body>
 
