address slack feedback
link to privacy policy, help ...

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -166,6 +166,14 @@
             link to go through the setup flow. Once completed, they can use the command just like you!
 
         </p>
+        <p>
+            &nbsp;
+        </p>
+        <p>
+            <hr />
+            <a href="https://coffeeroulette.madewithlove.com/privacy.html">privacy policy</a> | <a href="https://coffeeroulette.madewithlove.com/support">get help or give feedback</a>
+        </p>
+
     </div>
     <div class="image" id="pb"><a target="_blank" class="logo" href="https://www.madewithlove.com"><svg style="margin-right: 3px" width="30" viewBox="0 0 46 35" fill="none" xmlns="http://www.w3.org/2000/svg" class="logo_svg"><path d="M33.3983 0L22.7797 10.6186L12.161 0L0 12.161L22.7797 34.9407L33.3983 24.322L45.5593 12.161L33.3983 0ZM33.3983 2.9661L42.5339 12.1017H24.322L33.3983 2.9661ZM22.7797 31.9153L2.9661 12.161L12.161 2.9661L21.3559 12.161L31.9746 22.7797L22.7797 31.9153Z" fill="#ed2324"></path></svg><span class="logo-title">madewithlove</span></a>
     </div>
