Copy adjustment to pass the app submission process

--- a/templates/goodtogo.html
+++ b/templates/goodtogo.html
@@ -115,7 +115,7 @@
         location.hash = "#error";
     </script>
     {% endif %}
-    <p>You are good to go! Now open slack and go to a channel of your liking and type <span class="code">/coffeeroulette 2</span> in order to start a zoom call with 2 others in the channel. Of course, you can pick any other number.</p>
+    <p>You are good to go! Now open Slack and go to a channel of your liking and type <span class="code">/coffeeroulette 2</span> in order to start a Zoom call with 2 others in the channel. Of course, you can pick any other number.</p>
 
     <h2>About</h2>
     <p>
