--- a/templates/landing.html
+++ b/templates/landing.html
@@ -101,26 +101,24 @@
 </head>
 
 <body>
-    <div class="disclaimer message">Thank you for your interest in Coffee Roulette. 
-    </div>
     <div class="image" id="logo">
     </div>
     <div class="copy">
         <h1>Coffee Roulette</h1>
         <p>
             Put some spice in those long office days! By using the <span class="code">/coffeeroulette
-                [amount-of-guests]</span> slash command in a channel of your liking, you can set up a zoom call with
+                [amount-of-guests]</span> slash command in a channel of your liking, you can set up a Zoom call with
             some random colleagues in that channel. What Coffee roulette will do is post two links in the channel:</p>
         <img src="/img/slack-example.png" />
 
         <ul>
             <li>The first link is visible to everyone in the channel. It's probably best not click this one if you spun
-                the roulette yourself. If you do, you're already taking up one spot in the zoom call. This in order to
+                the roulette yourself. If you do, you're already taking up one spot in the Zoom call. This in order to
                 make sure that you can join your own call.</li>
             <li>The second link is only visible to you. Click that link, fast!</li>
         </ul>
         <p>What's so special about al this? Well, the public link will only allow the first [amount-of-people] (default
-            1) into the zoom room with you. You don't know who it will be and they don't know who set up the call!</p>
+            1) into the Zoom room with you. You don't know who it will be and they don't know who set up the call!</p>
         <p>Get to know your colleagues & friends in ways you never knew them before!
         </p>
         <h2>Installing coffee roulette</h2>
@@ -128,7 +126,7 @@
         <ul>
             <li>To start, click the "Add to Slack" button below or just try the <span class="code">/coffeeroulette</span>
                 command in Slack right now. and follow the authentication flow. Approve away. We're on'</li>
-            <li>Once you get the success message, click the link to authenticate your zoom account</li>
+            <li>Once you get the success message, click the link to authenticate your Zoom account</li>
             <li>Good to go! Try the slash command and meet your mystery colleague!</li>
         </ul>
 
@@ -157,7 +155,7 @@
                 person or, for example, <span class="code">/coffeeroulette 3</span> to allow 3 others in the room</li>
             <li>You will see 2 messages in the channel. Make sure to click the "start the meeting" button and <b>NOT</b>
                 the "jump in" button. Leave that one for your mystery guests</li>
-            <li>Open the zoom room and wait for your match!</li>
+            <li>Open the Zoom room and wait for your match!</li>
         </ul>
         </p>
         <h2>Allowing others to spin the roulette</h2>
