--- a/templates/zoomauth.html
+++ b/templates/zoomauth.html
@@ -107,7 +107,7 @@
         location.hash = "#error";
     </script>
     {% endif %}
-    <p>Half-way there! Slack is all set up, so all that's left is setting up zoom. Click the button below to do so</p>
+    <p>Half-way there! Slack is all set up, so all that's left is setting up Zoom. Click the button below to do so</p>
     <p><a href="/auth/zoom"><img src="https://marketplacecontent.zoom.us/zoom_marketplace/img/add_to_zoom.png" height="32" alt="Add to ZOOM" /></a>
     </p>
     <h2>About</h2>
