Add uninstall instructions

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -121,7 +121,7 @@
             1) into the Zoom room with you. You don't know who it will be and they don't know who set up the call!</p>
         <p>Get to know your colleagues & friends in ways you never knew them before!
         </p>
-        <h2>Installing coffee roulette</h2>
+        <h2>Installing Coffee roulette</h2>
         <p>
         <ul>
             <li>To start, click the "Add to Slack" button below or just try the <span class="code">/coffeeroulette</span>
@@ -148,7 +148,7 @@
                     src="https://platform.slack-edge.com/img/add_to_slack.png"
                     srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x"></a>
         </p>
-        <h2>Using coffee roulette</h2>
+        <h2>Using Coffee Roulette</h2>
         <p>
         <ul>
             <li>In a Slack channel of your choosing, type <span class="code">/coffeeroulette</span> to start a chat with 1
@@ -163,6 +163,16 @@
             Once Coffee Roulette is installed, this is easy: the first time they try to use the command, they'll get a
             link to go through the setup flow. Once completed, they can use the command just like you!
 
+        </p>
+
+        <h2>Uninstalling Coffee Roulette</h2>
+        <p>
+            <ol>
+                <li>Login to your Zoom Account and navigate to the Zoom App Marketplace.</li>
+                <li>Click <b>Manage &gt; Installed Apps</b> or search for the <b>Coffee Roulette</b>> app.</li>
+                <li>Click the <b>Coffee Roulette</b> app.</li>
+                <li>Click <b>Uninsall</b>.</li>
+            </ol>
         </p>
         <p>
             &nbsp;
